@@ -7,6 +7,9 @@
 * [*] Remove Submit Feedback form from the Me menu [#24020]
 * [*] Fix unselectable group blocks in the experimental editor [https://github.com/wordpress-mobile/GutenbergKit/pull/68]
 * [*] Prevent a intermittent crash when opening the experimental editor's "more" menu [#24065]
+* [*] Fix an issue with follow/unfollow buttons not working for tags [#24130]
+* [*] Fix an issue with tag header using incorrect copy for follow/unfollow button [#24130]
+* [*] Add a context menu for tags in the Reader menu [#24130]
 * [*] Fix incorrect background color for draft post cells on dashboard [#24080]
 * [*] Fix an issue with comments sometimes displaying black text on black background in dark mode [#23536]
 * [*] Fix broken header view visible when post is loading [#24123]
